# learning-artifacts

./: .gitignore  README.md  pyproject.toml
de_toolbox/dbt_experiments/: README.md  dbt_basics.ipynb
de_toolbox/dbt_experiments/nyc_yellow_taxi/: .gitignore  datacheck  explore_warehouse.ipynb  profiles.yml
de_toolbox/dbt_experiments/nyc_yellow_taxi/models/marts/: agg_daily_cc_riders.sql  fct_taxi_financials.sql
de_toolbox/dbt_experiments/nyc_yellow_taxi/models/taxi_rides/: model_properties.yml  stg_taxi_rides.sql  taxi_rides_raw.sql
notebooks/: python_data_model.ipynb
python/advanced_python/: python_data_model.ipynb  python_idioms_and_techniques.ipynb
python/design_patterns/: design_patterns.ipynb
python/design_patterns/decorator_pattern/: concrete_components.py  data_export_class.py  decorator.ipynb  decorators.py  interfaces.py  main.py
python/design_patterns/factory_method_pattern/: alert_system.py  concrete_factories.py  concrete_products.py  factory-method.ipynb  factory_interface.py  main.py  product_interface.py
python/design_patterns/observer_pattern/: concrete_observables.py  concrete_observer.py  interfaces.py  main.py  observer.ipynb
