[project]
name = "learning-artifacts"
version = "0.1.0"
description = "Centralized learning and research repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
]

# Optional dependency groups – install with `uv sync --extra <group>`
[project.optional-dependencies]
# Core Python learning (design patterns, data model, techniques)
python = []

# Machine‑learning toolbox groups
ml_toolbox = []               # generic ML utilities
ml_toolbox_tensorflow = []    # TensorFlow / Keras examples

# Data engineering toolbox
de_toolbox = []               # Airflow / data engineering examples
de_toolbox_dbt_experiments = [
    "dbt-core>=1.8.0", "dbt-duckdb>=1.10.1", 
    "numpy>=2.4.4", "pandas>=3.0.2"]  # DBT and DuckDB for experiments

# Computer‑vision toolbox
cv_toolbox = []               # OpenCV, image‑processing deps

# Data‑analysis toolbox
da_toolbox = []               # pandas, matplotlib, seaborn, etc.

# Infrastructure and miscellaneous experiments
infra = []                    # NGINX, Docker, infra examples
misc = []                     # assorted experiments and prompt engineering

